--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="verticalLine2"></div> 
         <div class="container">
         <div class="pic1"></div>
-        <div class="text-block2"> <h5>Project 1</h5> </div>
+        <div class="text-block2"> <h5>Coding Quiz</h5> </div>
 
         </div>
     </aside>
@@ -56,7 +56,7 @@
 
     <section>
         <div class="pic2"></div>
-        <div class="text-block3"> <h6>Project 2</h6> </div>
+        <div class="text-block3"> <h6>Password Generator</h6> </div>
         <div class="pic3"></div>
         <div class="text-block4"> <h6>Project 3</h6> </div> 
         <div class="pic4"></div>
