update for homework

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="verticalLine2"></div> 
         <div class="container">
         <div class="pic1"></div>
-        <div class="text-block2"> <h5>Coding Quiz</h5> </div>
+        <div class="text-block2"> <a href = "https://github.com/gillianbaker97/Coding-Quiz-Challenge"> <h5>Coding-Quiz</h5></a></div>
 
         </div>
     </aside>
@@ -56,13 +56,13 @@
 
     <section>
         <div class="pic2"></div>
-        <div class="text-block3"> <h6>Password Generator</h6> </div>
+        <div class="text-block3"><a href = "https://github.com/gillianbaker97/Password-Generator"> <h6>Password Generator</h6> </a></div>
         <div class="pic3"></div>
-        <div class="text-block4"> <h6>Project 3</h6> </div> 
+        <div class="text-block4"> <a href = "https://github.com/gillianbaker97/Schedule-Planner"> <h6>Schedule Planner</h6> </a></div> 
         <div class="pic4"></div>
-        <div class="text-block5"> <h6>Project 4</h6> </div>
+        <div class="text-block5"> <a href = "https://github.com/gillianbaker97/Weather-Forecast"> <h6>Weather-Forecast</h6> </a></div>
         <div class="pic5"></div>
-        <div class="text-block6"> <h6>Project 5</h6> </div>
+        <div class="text-block6"> <a href = "https://github.com/gillianbaker97/HorizonSEO"> <h6>Debugging</h6> </a></div>
 
     </section>
 
@@ -76,7 +76,6 @@
     
     </footer>
 
-<script src="script.js"></script>
 </body>
 
 
