--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     <header> 
         <h1>Gillian's Portfolio</h1>
         <ul>
-            <li><a href="https://gillianbaker97.github.io/prework-about-me">About Me</a> </li>
             
-            <li><a href="https://github.com/gillianbaker97?tab=repositories">Work</a></li>
+            <li><a href="#work">Work</a></li>
 
             <li><a href="mailto:gillianbaker97@gmail.com">Contact Me</a></li>
+
+            <li><a href = "http://www.linkedin.com/in/gillian-baker-b11153130">LinkedIn</a></li>
+
+            <li><a href = "https://github.com/gillianbaker97">GitHub</a></li>
+
 
         </ul>
 
@@ -44,11 +48,11 @@
 
         </div> 
 
-        <h4>Work</h4>
+        <h4 id = "work"> Work </h4>
         <div class="verticalLine2"></div> 
         <div class="container">
         <div class="pic1"></div>
-        <div class="text-block2"> <a href = "https://github.com/gillianbaker97/Coding-Quiz-Challenge"> <h5>Coding-Quiz</h5></a></div>
+        <div class="text-block2"> <a href = "https://github.com/eubanktr/ontheRocksandRoll"> <h5>Project 1</h5></a></div>
 
         </div>
     </aside>
@@ -60,9 +64,9 @@
         <div class="pic3"></div>
         <div class="text-block4"> <a href = "https://github.com/gillianbaker97/Schedule-Planner"> <h6>Schedule Planner</h6> </a></div> 
         <div class="pic4"></div>
-        <div class="text-block5"> <a href = "https://github.com/gillianbaker97/Weather-Forecast"> <h6>Weather-Forecast</h6> </a></div>
+        <div class="text-block5"> <a href = "https://github.com/gillianbaker97/ReadMe-Generator"> <h6>ReadME Generator</h6> </a></div>
         <div class="pic5"></div>
-        <div class="text-block6"> <a href = "https://github.com/gillianbaker97/HorizonSEO"> <h6>Debugging</h6> </a></div>
+        <div class="text-block6"> <a href = "https://github.com/gillianbaker97/Employee-Tracker"> <h6>SQL Introduction</h6> </a></div>
 
     </section>
 
